--- a/programming.html
+++ b/programming.html
@@ -33,10 +33,11 @@
         Josephine Aaron Weathington
         </div>
     </header>
-    <div class="container">
+    <div class="container programming">
         <a href="">image</a>
         <section class="info">
-        <div class="row">
+        <article class="article-1">
+        <div class="row gx-5 justify-content-between">
             <div class="col-md">
                 <h1>MARS ROVER 2022</h1>
                     <p>How can I call myself a web developer if I don't know basic JavaScript and JSON? Well, thank goodness I do! 
@@ -54,13 +55,13 @@
                 <p>Embed/image of source code goes here</p>
             </div>
         </div>
-        </section>
-        <section class="info">
-           <div class="row">
+        </article>
+        <article class="article-2">
+            <div class="row gx-5 justify-content-between">
             <div class="col-md">
                 <img src="assets/images/currency-value.webp" alt="screen image of currecy value program">
             </div>
-            <div class="col-md">
+            <div class="col-md-7">
                 <h1>CURRENCY VALUE HISTORY</h1>
                 <p>This image is of an application of JSON to retreive & convert currency values from Polygon.io.</p>
                 <a href="" target="blank">Test the application here.</a>
@@ -71,6 +72,7 @@
                 <p>Embed/image of source code goes here</p>
             </div>
         </div>
+        </article>
         </section>
 
         <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
