--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="container intro">
     <section class="intro">
         <div class="row about" >
             <div class="col-md-8">
@@ -43,7 +43,7 @@
                 <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
                 <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a> & <a href="assets/documents/cover-letter.pdf" 
                     target="blank">cover letter<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
-                <div class="row">
+                <div class="row about-skills">
                     <div class="col-md skills">
                         <h2>SKILLS</h2>
                             <dl>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-md-4"><img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> </div>
+            <div class="col-md-4"><img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> </div>
         </div>
     </section>
     <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
