--- a/reflection.html
+++ b/reflection.html
@@ -11,7 +11,7 @@
 <link href="assets/css/style.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Zen+Kaku+Gothic+Antique:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="primary">
@@ -33,13 +33,23 @@
         Josephine Aaron Weathington
         </div>
     </header>
-      <div class="container">
+      <div class="container reflection">
         <!--Adobe after effects full width-->
         <section class="info">
             <div class="row">
                 <div class="col-md">
-                    <h1>IFSC 4610: PROJECT DEVELOPMENT & PORTFOLIO</h1>
-                    <p>A reflection on my Capstone Project - the development of the University District website.</p>
+                    <div class="google-slides-container">
+                    <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
+                    </div>
+                </div>
+            </div>
+            <article class="article-1">
+             <div class="row">
+                <div class="col-md-8">
+                    <h1>CAPSTONE PROJECT</h1>
+                    <p>I've learned and discovered many things while completing UALR's web development program. I can't write about it all,
+                        but at least I can share a little bit of what I've discovered as I finished my Capstone Project - the development 
+                        of the University District's website.</p>
                     <dl>
                     <dt>PROJECT DESCRIPTION</dt>
                     <dd>The University District has been a project of the University of Arkansas at Little Rock to develop the area and 
@@ -47,77 +57,91 @@
                         vehicle for the entire university district and all of their related programs/partners.
                     </dd>
                     <dt>PROJECT ROLES</dt>
-                    <dd>Struction & Design: My role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
+                    <dd><em>Struction & Design:</em> my role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
                         My team and I spent a month completing our design process. First, we met with our client to identify their needs and 
                         expectations. Next, we considered the different types of users who would visit the website and how they may interact with 
                         it. Then, we developed a structure and flow list to visualize how the user may navigate through the website. After we 
                         determined the site structure,  I developed a low-fidelity prototype that we presented to our clients. Once they’ve given 
-                        us their feedback, I developed the website page layouts via wordpress to closely resemble the prototype. Once the pages 
-                        were created, my teammates collected the content and entered the content within the site. Last, we researched and applied 
+                        us their feedback, I developed the website page layouts via wordpress to closely resemble the prototype. After the pages 
+                        were created, my teammates collected the content and entered it within the site. We researched and applied 
                         additional plugins for extra functionality, like the news carousel on the landing page. We also reviewed the site for 
-                        responsive design and accessibility.  Finally, we presented our final product to our client and class. To view our design 
-                        process, check out my team’s Google Slides presentation on <em>page 5</em>.</dd>
+                        responsive design and accessibility.  Finally, we presented our final product to our client and class. Feel free to check out our design 
+                        process by skipping to <em>page 5</em> of my team’s Google Slides presentation, above.</dd>
                     </dl>
                 </div>
-                <div class="col-md">
-                    <div class="google-slides-container">
-                    <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
-                    </div>
+                </div>
+              </article>
+
+        <article class="growth">
+            <div class="wrap">
+            <h2>REFLECTION</h2>
+            <p>...here are some of the treasures I've discovered during my capstone project...</p>
+        </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <dl class="reflection-1">
+                        <dt>My most challenging moments and what made them so...</dt>
+                        <dd>A good web design might look simple and easy, but it’s far from linear, especially when the site contains 
+                            a lot of content. Web development is a balancing act between form and function. Finding a good starting 
+                            point to design is tricky because design is messy. Some needed ideas might be overlooked, and without a 
+                            thorough plan, we may find ourselves redesigning to include those ideas. It’s ok to refine an idea or 
+                            design, but to totally redesign a product because of the failure of including important aspects is 
+                            frustrating. Failing to plan, is planning to fail. The planning process is the most challenging part. 
+                            After that, development simply falls in line with the plan.</dd>
+                    </dl>
                 </div>
             </div>
-        </section>
-
-<!--SECTION & ARTICLES-->
-        <section class="reflection">
-            <h1>REFLECTION</h1>
-                <dl class="reflection-1">
-                    <dt>My most challenging moments and what made them so...</dt>
-                    <dd>A good web design might look simple and easy, but it’s far from linear, especially when the site contains 
-                        a lot of content. Web development is a balancing act between form and function. Finding a good starting 
-                        point to design is tricky because design is messy. Some needed ideas might be overlooked, and without a 
-                        thorough plan, we may find ourselves redesigning to include those ideas. It’s ok to refine an idea or 
-                        design, but to totally redesign a product because of the failure of including important aspects is 
-                        frustrating. Failing to plan, is planning to fail. The planning process is the most challenging part. 
-                        After that, development simply falls in line with the plan.</dd>
-                </dl>
-                <dl class="reflection-2">
-                    <dt>My most powerful learning moments and what made them so...</dt>
-                    <dd>Long before this program, I’ve learned there’s no use in controlling others. The better way
-                         includes cooperation and adaptation. Thanks to this program, I’ve become better at that and I’ve 
-                         discovered how to work around those I cannot work with. <em>Cannot work with?</em> Yes! Yet you wouldn’t know it 
-                         by the looks of it; unless you dig a little deeper. <em>Still confused?</em> Well, the thing is, not everyone 
-                         shares the same level of skills, ambition, interests, or values; and I’ve learned to accept that. You’re
-                         asking for hell fire when you try to force someone to challenge themselves in ways they don’t want to. 
-                         (Sometimes it is necessary, but not in the professional workplace.) Instead, I’ve learned to make the 
-                         most of it by allowing myself to be challenged by the extra weight, and by encouraging my teammates as 
-                         they watch me carry that extra weight. <em>The encouraging part is very important.</em> Eventually, we 
-                         found ourselves accepting the challenge or a piece of it. Choosing to try new things. Creating a better 
-                         something. Not because we were forced to, but because we wanted to see if we could. In the end, we grew 
-                         together. I wish we could all teach and learn from each other in this way.</dd>
-                </dl>
-                <dl class="reflection-3">
-                    <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
-                    <dd>I discovered that I just want to become a better version of myself. Developing a healthier version of ourselves is kind of
-                         like developing a good website. You begin with the content first, then style, then functionality. Progressive enhancement, 
-                         right? And let's not forget semantics! By developing in this way, we create a version that is more accessible and responsive. 
-                         I’ve discovered that most of us don’t design our life in this way. We focus more on style (how we appear to others), 
-                         then functionality (how we “behave” in front of others), and last we consider content (what we really know and value). <em>So am I talking about 
-                         web design, psychology, what am I talking about?</em> I’m talking about all of it! Design is communication. To understand how
-                         to effectively communicate through design, I need to understand people too, and myself. That’s all I’m trying to say here.</dd>
-                </dl>
-                <dl class="reflection-4">
-                    <dt>The most important thing I learned personally...</dt>
-                    <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
-                        mean doing whatever we want when we want, but doing what we can with what we know to create that something that increases our chances 
-                        (and the people around us, because we are not alone) of experiencing the fullness of life. Whatever we need to know, 
-                        we learn. This is how we grow from being simply adults to becoming free adults. A free mind can imagine, create, and 
-                        distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
-                        within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
-                        if only we allow ourselves to <b>submit</b> to the process and <b>actively participate</b> in following its instructions. 
-                        For freedom, is why I enjoy studying and applying UI/UX principles in design. 
-                        For a visual of growing into freedom, check out my animation below, <em>Watch Me Grow</em>.
-                    </dd>
-                </dl>
+            <div class="row justify-content-end">
+                <div class="col-md-8">
+                    <dl class="reflection-2">
+                        <dt>My most powerful learning moments and what made them so...</dt>
+                        <dd>Long before this program, I’ve learned there’s no use in controlling others. The better way
+                             includes cooperation and adaptation. Thanks to this program, I’ve become better at that and I’ve 
+                             discovered how to work around those I cannot work with. <em>Cannot work with?</em> Yes! Yet you wouldn’t know it 
+                             by the looks of it; unless you dig a little deeper. <em>Still confused?</em> Well, the thing is, not everyone 
+                             shares the same level of skills, ambition, interests, or values; and I’ve learned to accept that. You’re
+                             asking for hell fire when you try to force someone to challenge themselves in ways they don’t want to. 
+                             (Sometimes it is necessary, but not in the professional workplace.) Instead, I’ve learned to make the 
+                             most of it by allowing myself to be challenged by the extra weight, and by encouraging my teammates as 
+                             they watch me carry that extra weight. <em>The encouraging part is very important.</em> Eventually, we 
+                             found ourselves accepting the challenge or a piece of it. Choosing to try new things. Creating a better 
+                             something. Not because we were forced to, but because we wanted to see if we could. In the end, we grew 
+                             together. I wish we could all teach and learn from each other in this way.</dd>
+                    </dl>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <dl class="reflection-3">
+                        <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
+                        <dd>I discovered that I just want to become a better version of myself. Developing a healthier version of ourselves is kind of
+                             like developing a good website. You begin with the content first, then style, then functionality. Progressive enhancement, 
+                             right? And let's not forget semantics! By developing in this way, we create a version that is more accessible and responsive. 
+                             I’ve discovered that most of us don’t design our life in this way. We focus more on style (how we appear to others), 
+                             then functionality (how we “behave” in front of others), and last we consider content (what we really know and value). <em>So am I talking about 
+                             web design, psychology, what am I talking about?</em> I’m talking about all of it! Design is communication. To understand how
+                             to effectively communicate through design, I need to understand people too, and myself. That’s all I’m trying to say here.</dd>
+                    </dl>
+                </div>
+            </div>
+            <div class="row justify-content-end">
+                <div class="col-md-8">
+                    <dl class="reflection-4">
+                        <dt>The most important thing I learned personally...</dt>
+                        <dd>Most of us wait for life to happen to us, but we all have the potential to make life happen. Making life happen doesn't 
+                            mean doing whatever we want when we want, but doing what we can with what we know to create that something that increases our chances 
+                            (and the people around us, because we are not alone) of experiencing the fullness of life. Whatever we need to know, 
+                            we learn. This is how we grow from being simply adults to becoming free adults. A free mind can imagine, create, and 
+                            distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
+                            within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
+                            if only we allow ourselves to <b>submit</b> to the process and <b>actively participate</b> in following its instructions. 
+                            For freedom, is why I enjoy studying and applying UI/UX principles in design. 
+                            For a visual of growing into freedom, check out my animation below, <em>Watch Me Grow</em>.
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+           </article>
         </section>
 <!--ANIMATION VIDEO-->
 <a href="">Animation</a>
