--- a/programming.html
+++ b/programming.html
@@ -34,42 +34,27 @@
         </div>
     </header>
     <div class="container programming">
-        <a href="">image</a>
+        
+        <div class="row feature">
+            <div class="col-12">
+                <img src="assets/images/mars-explorer-2.webp" alt="screen image of mars rover program">
+            </div>
+        </div>
         <section class="info">
         <article class="article-1">
         <div class="row gx-5 justify-content-between">
-            <div class="col-md">
-                <h1>MARS ROVER 2022</h1>
+            <div class="col-md-5">
+                <h1>PROGRAMMING PROJECTS</h1>
                     <p>How can I call myself a web developer if I don't know basic JavaScript and JSON? Well, thank goodness I do! 
-                        Here are a couple of programming projects I developed while attending ITEC 3650: Guided Applications In IT. To
-                        the right is a JSON API retrieval of the Mars Rover photos from NASA that I developed. Actually, it's just an
+                        Here are a couple of programming projects I developed while attending ITEC 3650: Guided Applications In IT.</p>
+                    <p>Above, is a JSON API retrieval of the Mars Rover photos from NASA that I developed. Actually, it's just an
                     image of the API retrieval, but you may click the link below to check out the application.</p>
-                    <a href="" target="blank">Test the application here.</a>
+                    <a href="" target="blank">Test the Mars Rover application here.</a>
+                    <p>To the right, is an application of JSON to retreive & convert currency values from Polygon.io.</p>
+                    <a href="" target="blank">Test the Mars Rover application here.</a>
             </div>
-            <div class="col-md">
-                <img src="assets/images/mars-explorer.webp" alt="screen image of mars rover program">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md">
-                <p>Embed/image of source code goes here</p>
-            </div>
-        </div>
-        </article>
-        <article class="article-2">
-            <div class="row gx-5 justify-content-between">
-            <div class="col-md">
+            <div class="col-md-5">
                 <img src="assets/images/currency-value.webp" alt="screen image of currecy value program">
-            </div>
-            <div class="col-md-7">
-                <h1>CURRENCY VALUE HISTORY</h1>
-                <p>This image is of an application of JSON to retreive & convert currency values from Polygon.io.</p>
-                <a href="" target="blank">Test the application here.</a>
-            </div>
-        </div>
-        <div class="row justify-content-end">
-            <div class="col-md">
-                <p>Embed/image of source code goes here</p>
             </div>
         </div>
         </article>
