--- a/reflection.html
+++ b/reflection.html
@@ -48,8 +48,7 @@
                 <div class="col-md-8">
                     <h1>CAPSTONE PROJECT</h1>
                     <p>I've learned and discovered many things while completing UALR's web development program. I can't write about it all,
-                        but at least I can share a little bit of what I've discovered as I finished my Capstone Project - the development 
-                        of the University District's website.</p>
+                        but at least I can share a little bit of what I've discovered while developing my Capstone Project - the University District's website.</p>
                     <dl>
                     <dt>PROJECT DESCRIPTION</dt>
                     <dd>The University District has been a project of the University of Arkansas at Little Rock to develop the area and 
