--- a/technical-doc.html
+++ b/technical-doc.html
@@ -34,15 +34,16 @@
         </div>
     </header>
     <div class="container">
-      <div class="row">
+      <div class="row feature">
         <div class="col-md">
           <img src="assets/images/technical-doc.webp">
         </div>
       </div>
     <section class="info">
-        <div class="row">
-            <div class="col-md">
-              <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD</h1>
+      <article class="article-1">
+        <div class="row justify-content-between">
+            <div class="col-md-5">
+              <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD 2022</h1>
               <p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
     means little if our client doesn't know how to use the software to view it. So I created a short instructional document on
     how to view a website prototype through Adobe XD.</p>
@@ -52,6 +53,7 @@
               <img src="assets/images/xd.50.png">
             </div>
         </div>
+      </article>
     </section>
 <!--Image of prototype to the right of text-->
 <!--Image of prototype under text on the left-->
