--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -34,14 +34,15 @@
         </div>
     </header>
     <div class="container web-buffalo">
-      <div class="row">
+      <div class="row feature">
         <div class="col-md">
           <img src="assets/images/buffalo-web.webp">
         </div>
       </div>
     <section class="info">
-      <div class="row">
-        <div class="col-md">
+      <article class="article-1">
+      <div class="row justify-content-between">
+        <div class="col-md-6">
           <h1>BUFFALO RIVER ADVENTURERS 2022</h1>
           <p>A static website collaboration for a fictional organization, Buffalo River Adventurers. Designed to inspire outdoor enthusiasts to explore the 
               Buffalo National River. A project of IFSC 3650: Guided Applications in IT.</p>
@@ -52,18 +53,21 @@
           </dl>
           <a href="" target="blank">Visit the site,</a><span class="mobile-message"> but don't stop there. Check it out on mobile, too!</span>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <img src="assets/images/mobile-buffalo.gif" alt="an illustration of the buffalo river website on a mobile phone. Also includes an animation of the menu sliding open from left to right.">
         </div>
       </div>
+    </article>
     </section>
 
     <div class="credits">
       <h2>CREDITS</h2>
-      <p>Copywriter: Lillian McNeely</p>
-      <p>Lead Designer: Nicholas Corn</p>
-      <p>Developers: C.S.S. (Certified Success Squad)</p>
-    </div>
+      <ul>
+          <li>Copywriter: Lillian McNeely</li>
+          <li>Lead Designer: Nicholas Corn</li>
+          <li>Developers: C.S.S. (Certified Success Squad)</li>
+      </ul>
+  </div>
     <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
       <div class="col-md-4 d-flex align-items-center">
         <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
