--- a/web-university-district.html
+++ b/web-university-district.html
@@ -33,16 +33,17 @@
         Josephine Aaron Weathington
         </div>
     </header>
-  <div class="container">
-    <div class="row">
+  <div class="container web-ud">
+    <div class="row feature">
       <div class="col-md">
         <img src="assets/images/ud-web.webp">
       </div>
     </div>
     <section class="info">
-    <div class="row">
-      <div class="col-md">
-        <h1>IFCS 4610 UNIVERSITY DISTRICT 2022</h1>
+    <article class="article-1">
+    <div class="row justify-content-between">
+      <div class="col-md-6">
+        <h1>UNIVERSITY DISTRICT 2022</h1>
         <p>A wordpress website collaboration for the UALR University District Parnership to market the University District as a destination, to 
         encourage development, and to promote the business and services within the area.</p>
         <p>Stylistic choices were made to...</p>
@@ -53,10 +54,11 @@
           </dl>
           <a href="" target="blank">Visit the site.</a>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-3">
         <img src="assets/images/mobile-ud.png" alt="an illustration of the university district website on a mobile phone">
       </div>
     </div>
+    </article>
     </section>
 
     <div class="credits">
