--- a/film.html
+++ b/film.html
@@ -33,27 +33,54 @@
         Josephine Aaron Weathington
         </div>
     </header>
-    <div class="container">
+    <div class="container-fluid">
+
+    </div>
+
+    <div class="container film">
+
+      <div class="row feature">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/4Z8RX-mrl3I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      </div>
+    </div>
       <section class="info">
-        <div class="row">
-            <div class="col-md">
-                <h1>MCOM 3390 & MCOMM 2300 MEDIA PRODUCTION</h1>
-                <p>Short films that I completed as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
+        <article class="article-1">
+        <div class="row justify-content-between">
+            <div class="col-md-6">
+                <h1>MEDIA PRODUCTION</h1>
+                <p>Ok, so hear me; I still may not be great at holding a camera, BUT I've gotten pretty good at developing a narrative. Here
+                  are a few short films that I scripted, storyboared, edited, and filmed (with some help on the filming part) as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
                 <p><em>Kinship Legal Guardianship</em> is an informative film explaining the process to legal guardianship.</p>
                 <p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
                 <p><em>Can't Escape The Mischief</em> is an feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
             </div>
-            <div class="col-md">
+            <div class="col-md-4">
                 <img src="assets/images/film.png" class="img-fluid" alt="three faded film strips arranged horizontally">
             </div>
         </div>
-      </section>
-<!--VIDEO GRAPHIC IMAGE-->
+      </article>
+    
 <!--VIDEO OF CAUSE THAT'S WHAT I DO-->
+      <article class="article-2">
+      <div class="row feature">
+        <div class="col">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/6GWVHu-B-M0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          </div>
+        </div>
+      </div>
+      </article>
 <!--VIDEO OF CAN'T ESCAPE THE MISCHIEF-->
+      <article class="article-3">
+      <div class="row feature">
+        <div class="col">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/HrDH4A2vrqs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
+      </div>
+      </article>
+  </section>
 <div class="credits">
   <h2>CREDITS</h2>
-  <p>A-roll Film & Title Card: Yi Yao</p>
+  <p>A-roll film shots: Yi Hao</p>
 </div>
 <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
