--- a/film.html
+++ b/film.html
@@ -80,7 +80,10 @@
   </section>
 <div class="credits">
   <h2>CREDITS</h2>
-  <p>A-roll film shots: Yi Hao</p>
+  <ul>
+      <li>A-roll videographer, <em>Kinship Legal Guardianship</em>: Yi Hao</li>
+      <li>Videographer, <em>Can't Escape the Mischief</em>: Angel Jones</li>
+  </ul>
 </div>
 <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
