--- a/typography.html
+++ b/typography.html
@@ -44,11 +44,13 @@
             <article class="article-1">
             <div class="row justify-content-between">
                 <div class="col-md-5">
-                    <h1>ARST 3341: TYPOGRAPHY 2021</h1>
-                    <p>An exploration of the art and practice of typography as a tool for visual communication.</p>
+                    <h1>TYPOGRAPHY 2021</h1>
+                    <p>Design <em>is</em> communication. So here are a few art pieces that I've created while attending ARST 3341: Typography.
+                        These pieces are an exploration of the art and practice of typography as a tool for visual communication.
+                        You can click on each image for a larger view.</p>
                 </div>
                 <div class="col-8 col-md-5">
-                    <img src="assets/images/info-type-1.1.webp" alt="information type-1 creatively rearranged using typography principles">
+                    <a href="assets/images/info-type-1.1.webp"><img src="assets/images/info-type-1.1.webp" alt="information type-1 creatively rearranged using typography principles"></a>    
                 </div>
             </div>
             </article>
@@ -56,10 +58,12 @@
             <article class="article-2">
             <div class="row">
                 <div class="col-md">
-                    <img src="assets/images/info-type-2.1.webp" alt="information type-2 creatively rearranged using typography principles">
+                    <a href="assets/images/info-type-2.1.webp"><img src="assets/images/info-type-2.1.webp" alt="information type-2 creatively rearranged using typography principles">
+                    </a>
                 </div>
                 <div class="col-md">
-                    <img src="assets/images/info-type-3.1.webp" alt="information type-3 creatively rearranged using typography principles">
+                    <a href="assets/images/info-type-3.1.webp"><img src="assets/images/info-type-3.1.webp" alt="information type-3 creatively rearranged using typography principles">
+                    </a>
                 </div>
             </div>
             </article>
@@ -67,8 +71,10 @@
             <article class="article-3">
             <div class="row justify-content-between">
                 <div class="col-md-5">
-                    <h1>ARST 3340: INTRO TO GRAPHIC DESIGN 2021</h1>
-                    <p>Editorial designs of fictional organizations that communicate a controversial issue of my choosing.</p>
+                    <h1>GRAPHIC DESIGN 2021</h1>
+                    <p>To the right and below are editorial designs of fictional organizations that communicate a controversial issue of my choosing. Projects
+                        were completed as part of the course, ARST 3340: Intro To Graphic Design.
+                    </p>
                 </div>
                 <div class="col-8 col-md-5">
                     <img src="assets/images/poster.webp" alt="poster raising awareness about a particular social issue, the Stand Your Ground law."> 
@@ -91,9 +97,9 @@
     <div class="credits">
         <h2>CREDITS</h2>
         <ul>
-            <li>Copywriter // How Do We End Racism In Policing: American Civil Liberties Union (ACLU)</li>
-            <li>Photograph // James Baldwin Image: Popperfoto/Getty Images</li>
-            <li>Photograph // George Floyd Image-Left: Darnella Frazier</li>
+            <li>Copywriter, <em>How Do We End Racism In Policing</em>: American Civil Liberties Union (ACLU)</li>
+            <li>Photograph, <em>James Baldwin</em>: Popperfoto/Getty Images</li>
+            <li>Photograph, <em>George Floyd</em>: Darnella Frazier</li>
         </ul>
     </div>
     <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
