--- a/film.html
+++ b/film.html
@@ -33,22 +33,19 @@
         Josephine Aaron Weathington
         </div>
     </header>
-    <div class="container-fluid">
-
-    </div>
 
     <div class="container film">
-
-      <div class="row feature">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/4Z8RX-mrl3I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      </div>
-    </div>
+        <div class="row feature">
+          <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/4Z8RX-mrl3I" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
+          </div>
+        </div>
       <section class="info">
         <article class="article-1">
         <div class="row justify-content-between">
             <div class="col-md-6">
                 <h1>MEDIA PRODUCTION</h1>
-                <p>Ok, so hear me; I still may not be great at holding a camera, BUT I've gotten pretty good at developing a narrative. Here
+                <p>Ok, so hear me; I still may not be great at holding a camera, <b>but</b> I've gotten pretty good at developing a narrative. Here
                   are a few short films that I scripted, storyboared, edited, and filmed (with some help on the filming part) as projects for courses, Intro To Media Production (2020) & Non-Linear Video Editing (2022).</p>
                 <p><em>Kinship Legal Guardianship</em> is an informative film explaining the process to legal guardianship.</p>
                 <p><em>'Cause That's What I Do</em> is a feature film that tells a fictional story.</p>
@@ -62,20 +59,23 @@
     
 <!--VIDEO OF CAUSE THAT'S WHAT I DO-->
       <article class="article-2">
-      <div class="row feature">
-        <div class="col">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/6GWVHu-B-M0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          </div>
-        </div>
+        <div class="row">
+          <div class="col">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/6GWVHu-B-M0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
+            </div>
+          </div>
       </div>
       </article>
 <!--VIDEO OF CAN'T ESCAPE THE MISCHIEF-->
       <article class="article-3">
-      <div class="row feature">
-        <div class="col">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/HrDH4A2vrqs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
-      </div>
+        <div class="row">
+          <div class="col">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item youtube" src="https://www.youtube.com/embed/HrDH4A2vrqs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+            </div>
+          </div>
+        </div>
       </article>
   </section>
 <div class="credits">
