--- a/typography.html
+++ b/typography.html
@@ -36,7 +36,9 @@
     <div class="container typography">
         <div class="row feature">
             <div class="col-12">
-                <img src="assets/images/menu-redesign.webp" alt="a menu of Sonny William's Steakhouse redesigned a creative way using typography principles">
+                <a href="assets/images/menu-redesign.webp">
+                    <img src="assets/images/menu-redesign.webp" alt="a menu of Sonny William's Steakhouse redesigned a creative way using typography principles">
+                </a>
             </div>
         </div>
 
@@ -77,17 +79,20 @@
                     </p>
                 </div>
                 <div class="col-8 col-md-5">
-                    <img src="assets/images/poster.webp" alt="poster raising awareness about a particular social issue, the Stand Your Ground law."> 
+                    <a href="assets/images/poster.webp"><img src="assets/images/poster.webp" alt="poster raising awareness about a particular social issue, the Stand Your Ground law."> 
+                    </a>
                 </div>
             </div>
             </article>
             <article class="article-4">
             <div class="row justify-content-between align-items-center">
                 <div class="col-md-7">
-                    <img src="assets/images/publication.webp" alt="a publication article for a fictional magazine called Road">
+                    <a href="assets/images/publication.webp"><img src="assets/images/publication.webp" alt="a publication article for a fictional magazine called Road">
+                    </a>
                 </div>
                 <div class="col-8 col-md-4">
-                    <img src="assets/images/magazine-cover.webp" alt="cover design for a fictional magazine called Road">
+                    <a href="assets/images/magazine-cover.webp"><img src="assets/images/magazine-cover.webp" alt="cover design for a fictional magazine called Road">
+                    </a>
                 </div>
             </div>
             </article>
