--- a/projects.html
+++ b/projects.html
@@ -35,13 +35,14 @@
     </header>
     <div class="container">
     <section class="web-design-projects">
+        <article class="article-1">
         <div class="row">
             <div class="col-md">
                 <h1>WEB DEVELOPMENT & DESIGN</h1>
-                <p>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.
-                    - Intro to IT and Applications (2021 - 2022) // Straight outta the course syllabus.
+                <p><q>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.</q>
+                    - Intro to IT & Applications <abbr title="University of Arkansas at Little Rock">UALR</abbr> 
                 </p>
-                <p>"Design is the intermediary between information and understanding." -- Hans Hoffman, artist and teacher</p>
+                <p><q>Design is the intermediary between information and understanding.</q> -Hans Hoffman, artist and teacher</p>
             </div>
             <div class="col-md">
                 <a href="web-buffalo-river.html">Buffalo River Adventurers</a>
@@ -50,11 +51,13 @@
                 <a href="web-university-district.html">University District</a>
             </div>
         </div>
+    </article>
     </section>
     <!--End Section-->
       
     <!--Section & Articles-->
     <section class="ux-projects">
+        <article class="article-2">
         <div class="row">
             <div class="col-md">        
                 <a href="ux-campus-police.html">UALR Campus Police App</a>
@@ -63,20 +66,22 @@
                 <a href="ux-campus-food.html">UALR Food Ordering Service App</a>
             </div>
             <div class="col-md"><h1>UX DESIGN</h1>
-                <p>"Make it simple, but significant." -- Don Draper, fictional character on Mad Men</p>
-                <p>"Design is not just what it looks like and feels like. Design is how it works." -- Steve Jobs, co-founder of Apple, Inc.</p>
+                <p><q>Make it simple, but significant.</q> -- Don Draper, fictional character on Mad Men</p>
+                <p><q>Design is not just what it looks like and feels like. Design is how it works.</q> -- Steve Jobs, co-founder of Apple, Inc.</p>
             </div>
         </div>
+        </article>
     </section>
     <!--End Section-->
 
 
     <!--Section & Articles-->
     <section class="database-projects">
+        <article class="article-3">
         <div class="row">
             <div class="col-md">    
                 <h1>DATABASE & PROGRAMMING</h1>
-                <p>"Design adds value faster than it adds costs." -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
+                <p><q>Design adds value faster than it adds costs.</q> -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
             </div>
             <div class="col-md">        
                 <a href="database.html">Database</a>
@@ -85,12 +90,14 @@
                 <a href="programming.html">Programming</a>
             </div>
         </div>
+        </article>
     </section>
     <!--End Section-->
 
 
     <!--Section & Articles-->
     <section class="communication-skills">
+        <article class="article-4">
         <div class="row">
             <div class="col-md">
                 <a href="film.html">Film</a>
@@ -100,10 +107,11 @@
             </div>
             <div class="col-md">    
                 <h1>COMMUNICATION</h1>
-                <p>"Design creates culture. Culture shapes values. Values determine the future." -- Robert L. Peters, designer and author</p>
-                <p>"Styles come and go. Good design is a language, not a style." -- Massimo Vignelli, Italian designer</p>
+                <p><q>Design creates culture. Culture shapes values. Values determine the future.</q> -- Robert L. Peters, designer and author</p>
+                <p><q>Styles come and go. Good design is a language, not a style.</q> -- Massimo Vignelli, Italian designer</p>
             </div>
         </div>
+        </article>
     </section>
 
     <!--End Section-->
@@ -111,11 +119,12 @@
 
     <!--Section & Articles-->
     <section class="writing-skills">
+        <article class="article-5">
         <div class="row">
             <div class="col-md">    
                 <h1>WRITING</h1>
-                <p>"Design is intelligence made visible." -- Alina Wheeler, author</p>
-                <p>“Every great design begins with an even better story”. -- Lorinda Mamo, designer and creative director</p></div>
+                <p><q>Design is intelligence made visible.</q> -- Alina Wheeler, author</p>
+                <p><q>Every great design begins with an even better story.</q> -- Lorinda Mamo, designer and creative director</p></div>
             <div class="col-md">        
                 <a href="technical-doc.html">Technical Documents</a>
             </div>
@@ -123,6 +132,7 @@
                 <a href="reflection.html">Watch Me Grow</a>
             </div>
         </div>
+        </article>
     </section>
     <!--End Section-->
 
