--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
         Josephine Aaron Weathington
         </div>
     </header>
-    <div class="container">
+    <div class="container projects">
     <section class="web-design-projects">
         <article class="article-1">
         <div class="row">
@@ -129,7 +129,13 @@
                 <a href="technical-doc.html">Technical Documents</a>
             </div>
             <div class="col-md">        
-                <a href="reflection.html">Watch Me Grow</a>
+                <a href="reflection.html">
+                    <div class="hover">
+                        <div class="inner">
+                            <img src="assets/images/reflection.png">
+                        </div>
+                        </div>
+                    </a>
             </div>
         </div>
         </article>
