--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
             <div class="col-md">        
                 <a href="reflection.html">
                     <div class="inner">
-                        <div class="hover">
+                        <div class="hover-img">
                             <img src="assets/images/reflection.png">
                         </div>
                         </div>
